--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ dense_depth_priors_nerf/slurm_output*
 dense_depth_priors_nerf/runs/*
 dense_depth_priors_nerf/log*
 dense_depth_priors_nerf/depth_priors_network_weights/*
+piecewise_linear/slurm_output*
+piecewise_linear/runs/*
+piecewise_linear/log*
+piecewise_linear/depth_priors_network_weights/*
