--- a/.gitignore
+++ b/.gitignore
@@ -56,4 +56,4 @@ dynibar_mika/out/*
 Neural-Scene-Flow-Fields_mika/NSFF/
 dynamic-video-depth_mika/
 scade_dynamics/log*
-scade_dynamics/run*
+scade_dynamics/runs*
