--- a/scade_dynamics/env.yml
+++ b/scade_dynamics/env.yml
@@ -1,6 +1,7 @@
-name: scade
+name: scade3
 channels:
   - pytorch
+  - bottler
   - conda-forge
   - defaults
 dependencies:
@@ -28,9 +29,9 @@ dependencies:
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.18.1=h7f98852_0
   - c-blosc2=2.4.2=h7a311fb_0
-  - ca-certificates=2022.9.24=ha878542_0
+  - ca-certificates=2023.12.12=h06a4308_0
   - cairo=1.16.0=ha61ee94_1014
-  - certifi=2022.9.24=pyhd8ed1ab_0
+  - certifi=2023.11.17=py38h06a4308_0
   - cffi=1.15.1=py38h4a40e3a_1
   - cfitsio=4.1.0=hd9d235c_0
   - charls=2.3.4=h9c3ff4c_0
@@ -96,10 +97,11 @@ dependencies:
   - jasper=2.0.33=ha77e612_0
   - jedi=0.18.1=pyhd8ed1ab_2
   - jinja2=3.1.2=pyhd8ed1ab_1
+  - joblib=1.2.0=py38h06a4308_0
   - jpeg=9e=h166bdaf_2
   - jsonschema=4.16.0=pyhd8ed1ab_0
   - jupyter=1.0.0=py38h578d9bd_7
-  - jupyter_client=7.4.2=pyhd8ed1ab_0
+  - jupyter_client=7.4.9=pyhd8ed1ab_0
   - jupyter_console=6.4.4=pyhd8ed1ab_0
   - jupyter_core=4.11.1=py38h578d9bd_0
   - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
@@ -190,6 +192,7 @@ dependencies:
   - munkres=1.1.4=pyh9f0ad1d_0
   - mysql-common=8.0.31=haf5c9bc_0
   - mysql-libs=8.0.31=h28c427c_0
+  - natsort=7.1.1=pyhd3eb1b0_0
   - nbclient=0.7.0=pyhd8ed1ab_0
   - nbconvert=7.2.2=pyhd8ed1ab_0
   - nbconvert-core=7.2.2=pyhd8ed1ab_0
@@ -204,10 +207,11 @@ dependencies:
   - nss=3.78=h2350873_0
   - numpy=1.23.3=py38h14f4228_0
   - numpy-base=1.23.3=py38h31eccc5_0
+  - nvidiacub=1.10.0=0
   - opencv=4.6.0=py38h578d9bd_4
   - openh264=2.3.1=h27087fc_1
   - openjpeg=2.5.0=h7d73246_1
-  - openssl=1.1.1q=h166bdaf_0
+  - openssl=1.1.1w=h7f8727e_0
   - p11-kit=0.24.1=hc5aa10d_0
   - packaging=21.3=pyhd8ed1ab_0
   - pandas=1.5.1=py38h8f669ce_0
@@ -260,6 +264,7 @@ dependencies:
   - readline=8.1.2=h0f457ee_0
   - requests=2.28.1=pyhd8ed1ab_1
   - scikit-image=0.19.3=py38h47df419_1
+  - scikit-learn=1.3.0=py38h1128e8f_1
   - scipy=1.9.1=py38h14f4228_0
   - send2trash=1.8.0=pyhd8ed1ab_0
   - setuptools=65.5.0=pyhd8ed1ab_0
@@ -274,6 +279,7 @@ dependencies:
   - tensorboard=1.15.0=py38_0
   - tensorboardx=2.2=pyhd3eb1b0_0
   - terminado=0.16.0=pyh41d4057_0
+  - threadpoolctl=2.2.0=pyh0d69192_0
   - tifffile=2022.10.10=pyhd8ed1ab_0
   - tinycss2=1.2.1=pyhd8ed1ab_0
   - tk=8.6.12=h27826a3_0
@@ -322,4 +328,12 @@ dependencies:
   - zlib=1.2.13=h166bdaf_4
   - zlib-ng=2.0.6=h166bdaf_0
   - zstd=1.5.2=h6239696_4
-prefix: /opt/conda/envs/scade
+  - pip:
+      - fvcore==0.1.5.post20221221
+      - iopath==0.1.10
+      - portalocker==2.8.2
+      - pytorch3d==0.7.2
+      - tabulate==0.9.0
+      - termcolor==2.4.0
+      - yacs==0.1.8
+prefix: /orion/u/junru/anaconda3/envs/scade3
